ar quicklook test 1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages. This is a AR quicklook test.</p>
+<a href="tv_retro.usdz" rel="ar">
+	<img src="retrotv_2x.jpg">
+</a>
 </body>
 </html>
