replace tv with bike 3d file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. This is a AR quicklook test.</p>
-<a href="tv_retro.usdz" rel="ar">
-	<img src="retrotv_2x.jpg">
+<a href="road-bike-silver-2-usdz.usdz" rel="ar">
+	<img src="bike-preview.png">
 </a>
 </body>
 </html>
