change bike file name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. This is a AR quicklook test.</p>
-<a href="road-bike-silver-2-usdz.usdz" rel="ar">
+<a href="roadbikesilver.usdz" rel="ar">
 	<img src="bike-preview.png">
 </a>
 </body>
