--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. This is a AR quicklook test.</p>
-<a href="roadbikesilver.usdz" rel="ar">
-	<img src="bike-preview.png">
+<p>I'm hosted with GitHub Pages. This is an iOS AR quicklook test.</p>
+<a href="frame2.usdz" rel="ar">
+	<img src="frame2.png">
 </a>
 </body>
 </html>
